[SP-135] Portal - pdf invoices, fix vertical spacing issue  in "billed to" section.

--- a/app/assets/stylesheets/invoice.css
+++ b/app/assets/stylesheets/invoice.css
@@ -57,9 +57,6 @@ body {
 
 #bill-to {
   color: black;
-  p {
-    line-height: 5rem;
-  }
 }
 
 .font-small-grey {
